--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,12 +1,45 @@
+:root {
+    --color-heading: #ffff00;
+    --color-game-message: #ffffff;
+    --color-board-cell-reveal-empty: #0000ff;
+    --color-board-cell-reveal-ship: #ffff00;
+    --color-computer-board-cell-hidden: #333333;
+    --color-player-empty-cell: #c9c9c9;
+    --color-player-ship-cell: #808080;
+}
+
 * {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2rem;
+    background-color: #0b043c;
+    text-align: center;
+}
+
+h1 {
+    color: var(--color-heading);
+    margin: 20px 0;
+}
+
+h3 {
+    color: var(--color-game-message);
+    margin: 20px 0;
+}
+
+/* Will work on it on future making it hidden for now */
+.game-message {
+    display: none;
 }
 
 .game-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 20px 0;
 }
 
 .board-container {
@@ -18,14 +51,26 @@
 
 .board-cell {
     resize: both;
-    border: .5px solid white;
-    background-color: aquamarine;
+    border: .5px solid rgb(255, 255, 255);
 }
 
-.ship-cell {
-    background-color: red;
+
+.player-board .board-cell {
+    background-color: var(--color-player-empty-cell);
 }
 
-.attacked-cell {
-    background-color: grey;
+.player-board .ship-cell {
+    background-color: var(--color-player-ship-cell);
+}
+
+.computer-board .board-cell {
+    background-color: var(--color-computer-board-cell-hidden);
+}
+
+.board-cell.attacked-cell {
+    background-color: var(--color-board-cell-reveal-empty);
+}
+
+.ship-cell.attacked-cell {
+    background-color: var(--color-board-cell-reveal-ship);
 }
