--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,3 +74,21 @@ h3 {
 .ship-cell.attacked-cell {
     background-color: var(--color-board-cell-reveal-ship);
 }
+
+.overlay-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    z-index: 1;
+}
+
+.hidden {
+    display: none;
+}
